# egpythia6-standalone

./: CMakeLists.txt  LICENSE  readme.md
